k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nheek-service
  labels:
    app: nheek
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: nheek
